Bug 153012 - FILEOPEN PPTX: ring segment renders black (or transparent?) instead of grey
Summary: FILEOPEN PPTX: ring segment renders black (or transparent?) instead of grey
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4 all versions
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
: 154530 (view as bug list)
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2023-01-13 20:02 UTC by Gerald Pfeifer
Modified: 2023-09-04 08:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (2.36 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-01-13 20:02 UTC, Gerald Pfeifer
Details
Visual comparison Office 365 (left) vs LibreOffice (right) (68.67 KB, image/png)
2023-01-13 20:03 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-01-13 20:02:55 UTC
Created attachment 184645 [details]
Sample slide (PPTX)

Compare the sample slide in Impress vs PowerPoint and notice how a
segment of the ring shown is black (or the background color) instead
of grey.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5b3fd1af1247d4096451e5a768c3438fbccec2b2
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US

  and back to version 6.4.
Comment 1 Gerald Pfeifer 2023-01-13 20:03:26 UTC
Created attachment 184646 [details]
Visual comparison Office 365 (left) vs LibreOffice (right)
Comment 2 m_a_riosv 2023-01-13 21:13:41 UTC
Reproducible it's imported with black color instead grey.
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12e8d57e791bb1befc0716d4d02af7d1d1ccb4ae
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
Comment 3 Mike Kaganski 2023-08-16 08:02:56 UTC
The color of the data point's fill is defined as

    <a:schemeClr val="bg1">
        <a:lumMod val="85000"/>
    </a:schemeClr>

which is "Background 1, Darker 15%" when using a *light* slide background. When the slide background is dark, it seems that the theme's "Text/Background - Dark 1" is used for "Background 1", and there's no "Darker 15%" in the palette then ...

I can't find a documentation about the 'bg1' defaults (the OOXML seem to not define it in theme), nor about its dependency on underlying background ...

Tomaz, could you please advise, where these could be found? Thank you!
Comment 4 Mike Kaganski 2023-08-16 08:19:40 UTC
(In reply to Mike Kaganski from comment #3)
> (the OOXML seem to not define it in theme)

Ah, sorry - I see that ppt/charts/chart1.xml has this:

    <c:clrMapOvr bg1="lt1" .../>
Comment 5 Commit Notification 2023-08-16 21:31:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/953e586dbce1c3195ecb07b2491b6e1a20a2cd7f

tdf#153012: import chart's c:clrMapOvr element

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Mike Kaganski 2023-08-17 05:27:50 UTC
*** Bug 154530 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2023-08-17 09:36:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9f6768748d9170c5990604feebd0bc50f2cb59c7

tdf#153012: import chart's c:clrMapOvr element

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gerald Pfeifer 2023-09-04 08:53:46 UTC
Verified in both 

  Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 3c7a35dd28fbc337a23473873b3dd47392b883ae
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and the backport in 

  Version: 7.6.1.0.0+ (X86_64) / LibreOffice Community
  Build ID: 86d39aec6ab4205955921406d2512d6eab8d3fe8
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Thank you, Mike!