tdf#153012: import chart's c:clrMapOvr element

Otherwise, a wrong mapping could be used, e.g. from slide.

Change-Id: I8b0fcebcd21ac2bab8b7f58d0c24753d2eca02c7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155748
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>